work for selectors, namespace, media, rules and other

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -11,7 +11,7 @@ set(MyCSS_PROJECT_SOURCE "${MyCSS_PROJECT_DIR_ROOT}/source")
 
 set(MyCSS_VERSION_MAJOR 0)
 set(MyCSS_VERSION_MINOR 0)
-set(MyCSS_VERSION_PATCH 2)
+set(MyCSS_VERSION_PATCH 8)
 set(MyCSS_VERSION_STRING "${MyCSS_VERSION_MAJOR}.${MyCSS_VERSION_MINOR}.${MyCSS_VERSION_PATCH}")
 
 project(${MyCSS_PROJECT_NAME})
@@ -47,7 +47,12 @@ option(MyCSS_INSTALL_HEADER "Install header files" OFF)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MyCSS_OPTIMIZATION_LEVEL}")
 
 include_directories(${MyCSS_PROJECT_SOURCE})
-FILE(GLOB ALL_SOURCE_LIST "${MyCSS_PROJECT_SOURCE}/mycss/*.c")
+FILE(GLOB ALL_SOURCE_LIST 
+  "${MyCSS_PROJECT_SOURCE}/mycss/*.c"
+  "${MyCSS_PROJECT_SOURCE}/mycss/selectors/*.c"
+  "${MyCSS_PROJECT_SOURCE}/mycss/namespace/*.c"
+  "${MyCSS_PROJECT_SOURCE}/mycss/rules/*.c"
+  "${MyCSS_PROJECT_SOURCE}/mycss/media/*.c")
 
 if (!UNIX AND WIN32)
   if(${CMAKE_CL_64})
